create some mds and reorganizing files

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="/my-journey.html">My Journey</a></li>
                 <li><a href="/contacts.html">Contacts</a></li>
                 <li><a href="/experiment.html">Experiment</a></li>
-                <li><a href="/nativedialogs.html">HW4</a></li>
+                <li><a href="hw4/nativedialogs.html">HW4</a></li>
             </ul> 
         </nav>
     </header>
