--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -18,7 +18,7 @@
         href="data:image/svg+xml,&#x3C;svg xmlns=&#x22;http://www.w3.org/2000/svg&#x22; viewBox=&#x22;0 0 100 100&#x22;&#x3E;&#x3C;text y=&#x22;.9em&#x22; font-size=&#x22;90&#x22;&#x3E;&#x1F680;&#x3C;/text&#x3E;&#x3C;/svg&#x3E;"
     />
     
-    <!-- <link rel="stylesheet" type="text/css" href="/stylesheets/index.css"> -->
+    <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
 
     <script type="text/javascript" type="module" src="part1.js"></script>
 
