--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -36,13 +36,10 @@
             <!-- <label for="menu-show" class="menu-button">Menu</label> -->
             <!-- <input type="checkbox" id="menu-show"> -->
             <ul>
-                <li><a class="active" href="/index.html">Let's Start Here!</a></li>
-                <li><a href="/projects.html">Projects</a></li>
-                <li><a href="/other-things.html">Other things I do</a></li>
-                <li><a href="/my-journey.html">My Journey</a></li>
-                <li><a href="/contacts.html">Contacts</a></li>
-                <li><a href="/experiment.html">Experiment</a></li>
-                <li><a href="/nativedialogs.html">HW4</a></li>
+                <li><a href="/index.html">Let's Start Here!</a></li>
+                <li><a class="active" href="/nativedialogs.html">HW4</a></li>
+                <li><a href="/crud.html">CRUD</a></li>
+                <li><a href="/styledcrud.html">Contacts</a></li>
             </ul> 
         </nav>
     </header>
