--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -38,8 +38,8 @@
             <ul>
                 <li><a href="/index.html">Let's Start Here!</a></li>
                 <li><a class="active" href="/nativedialogs.html">HW4</a></li>
-                <li><a href="/crud.html">CRUD</a></li>
-                <li><a href="/styledcrud.html">Contacts</a></li>
+                <li><a href="crud.html">CRUD</a></li>
+                <li><a href="styledcrud.html">Styled CRUD</a></li>
             </ul> 
         </nav>
     </header>
