--- a/hw4/crud.html
+++ b/hw4/crud.html
@@ -70,9 +70,9 @@
             <!-- <input type="checkbox" id="menu-show"> -->
             <ul>
                 <li><a href="/index.html">Let's Start Here!</a></li>
-                <li><a href="/nativedialogs.html">HW4</a></li>
-                <li><a class="active" href="/crud.html">CRUD</a></li>
-                <li><a href="/styledcrud.html">Contacts</a></li>
+                <li><a href="nativedialogs.html">HW4</a></li>
+                <li><a class="active" href="crud.html">CRUD</a></li>
+                <li><a href="styledcrud.html">Styled CRUD</a></li>
             </ul> 
         </nav>
     </header>
