--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -19,7 +19,8 @@
     />
     
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.10/purify.min.js"></script>
     <script type="text/javascript" type="module" src="part1.js"></script>
 
 </head>
