--- a/hw4/crud.html
+++ b/hw4/crud.html
@@ -89,7 +89,8 @@
             <!-- <input type="checkbox" id="menu-show"> -->
             <ul>
                 <li><a href="/index.html">Let's Start Here!</a></li>
-                <li><a href="nativedialogs.html">HW4</a></li>
+                <li><a href="nativedialogs.html">Native Dialog</a></li>
+                <li><a href="customdialog.html">Custom Dialog</a></li>
                 <li><a class="active" href="crud.html">CRUD</a></li>
                 <li><a href="styledcrud.html">Styled CRUD</a></li>
             </ul> 
