--- a/hw4/customdialog.html
+++ b/hw4/customdialog.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
     <!-- DOMPurify -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.10/purify.min.js" integrity="sha512-Qr/d6af6cN41/GIKiSmrQd4Y19/fo0YvWhD1VND8O+BsfbFBaZI4K7VVPoUZrd8PzMQ3CE71CkMjhrKf1NbhdQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="text/javascript" type="module" src="nativedialog.js"></script>
+    <script type="text/javascript" type="module" src="customdialog.js"></script>
 
 </head>
 <body>
@@ -47,30 +47,26 @@
     </header>
         
     <main>
-        <h1 class="pageTitle">Native dialogs</h1>
+        <h1 class="pageTitle">Custom dialogs</h1>
 
-        <dialog id="favDialog">
-            <form method="dialog">
-              <p><label>Favorite animal:
-                <select>
-                  <option value="default">Choose…</option>
-                  <option>Brine shrimp</option>
-                  <option>Red panda</option>
-                  <option>Spider monkey</option>
-                </select>
-              </label></p>
-              <div>
-                <button value="cancel">Cancel</button>
-                <button id="confirmBtn" value="default">Confirm</button>
-              </div>
+        <dialog id="popupDialog">
+            <form id="formDialog" method="dialog">
+                <p id="dialogText">Result</p>
+                <input type="text" id="textInput">
+                <button id="cancel">Cancel</button>
+                <button id="confirm">OK
+                    <!-- <span aria-hidden="true">OK</span> -->
+                </button>
+
             </form>
         </dialog>
         <div>
             <button type="button" id="alert-button">Alert</button>
             <button type="button" id="confirm-button">Confirm</button>
             <button type="button" id="prompt-button">Prompt</button>
+            <button type="button" id="safer-button" hidden>Safer Prompt</button>
         </div>
-        <output></output>
+        <output id="outputBox"></output>
 
     </main>
 
