--- a/hw4/customdialog.html
+++ b/hw4/customdialog.html
@@ -64,7 +64,7 @@
             <button type="button" id="alert-button">Alert</button>
             <button type="button" id="confirm-button">Confirm</button>
             <button type="button" id="prompt-button">Prompt</button>
-            <button type="button" id="safer-button" hidden>Safer Prompt</button>
+            <button type="button" id="safer-button">Safer Prompt</button>
         </div>
         <output id="outputBox"></output>
 
